Added basics for mobile nav but not yet functioning

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container">
 
       <header>
-        <h1>Really Awesome Music Site</h1>
+        <h1>iTunes Music Search</h1>
       </header>
 
       <section class="player">
